# dmoj-judge-server

./: LICENSE  README.md  pyproject.toml  setup.py
src/dmoj_judge/: cli.py  compiler_isolate.py  config.py  enums.py  errors.py  pm.py  problem.py  problems.py  rc.py  types.py
src/dmoj_judge/commands/: cli.py
src/dmoj_judge/cptbox/: _cptbox.pyi  _cptbox.pyx  errors.py  filesystem_policies.py  handlers.py  handlers.pyi  helper.cpp  isolate.py  lazy_bytes.py  syscalls.py  tracer.py
src/dmoj_judge/cptbox/_utils/: unicode.py
src/dmoj_judge/cptbox/syscalls/: generate.py
src/dmoj_judge/executors/: __init__.py  filesystem.py  manager.py
src/dmoj_judge/grader/: base.py  standard.py
src/dmoj_judge/graders/: __init__.py  base.py  manager.py  standard.py
src/dmoj_judge/judge/: judge.py  worker.py
src/dmoj_judge/types/: __init__.py  problem.py  result.py
src/dmoj_judge/utils/: builtin_int_patch.py  communicate.py  os_ext.py
src/dmoj_overhaul/: cli.py  config.py  errors.py  judge.py  pm.py  problem.py  problems.py  rc.py  types.py  worker.py
src/dmoj_overhaul/cptbox/: __init__.py  _cptbox.cpp  compiler_isolate.py  isolate.py  tracer.py  utils.py
src/dmoj_overhaul/executors/: base.py
src/dmoj_overhaul/judge/: __init__.py  judge.py  worker.py
src/dmoj_overhaul/utils/: builtin_int_patch.py
