[project]
name = "dmoj_judge"
version = "0.0.1"
description = ""  # TODO
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Boris Martinez", email = "x93bd0@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"  # TODO: Maybe Unix-only?
]

license = "MIT"
license-files = ["LICEN[CS]E"]

dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
dmoj-cli = "dmoj_judge.commands:cli.main"

[project.urls]
Homepage = "https://github.com/x93bd0/dmoj-judge-server"
Issues = "https://github.com/x93bd0/dmoj-judge-server/issues"

[build-system]
requires = ["setuptools", "setuptools-scm", "cython"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

[tool.mypy]
disable_error_code = ["union-attr"]
